--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,166 @@
-streamlit
-openai
-python-dotenv
-faiss-cpu
-langchain
-sentence-transformers
-
+aiohappyeyeballs==2.4.4
+aiohttp==3.11.11
+aiosignal==1.3.2
+altair==5.4.1
+annotated-types==0.7.0
+anyio==4.8.0
+asgiref==3.7.2
+attrs==24.2.0
+backoff==2.2.1
+bcrypt==4.2.1
+beautifulsoup4==4.12.3
+blinker==1.9.0
+build==1.2.2.post1
+cachetools==5.5.0
+certifi==2024.8.30
+charset-normalizer==3.4.0
+chroma-hnswlib==0.7.6
+chromadb==0.6.3
+click==8.1.7
+coloredlogs==15.0.1
+dataclasses-json==0.6.7
+defusedxml==0.7.1
+Deprecated==1.2.15
+distlib==0.3.8
+distro==1.9.0
+Django==5.0.2
+django-cors-headers==4.3.1
+djangorestframework==3.14.0
+durationpy==0.9
+faiss-cpu==1.9.0.post1
+fastapi==0.115.6
+filelock==3.13.1
+flatbuffers==24.12.23
+frozenlist==1.5.0
+fsspec==2024.12.0
+gitdb==4.0.11
+GitPython==3.1.43
+google-auth==2.37.0
+googleapis-common-protos==1.66.0
+grpcio==1.69.0
+h11==0.14.0
+httpcore==1.0.7
+httptools==0.6.4
+httpx==0.28.1
+httpx-sse==0.4.0
+huggingface-hub==0.27.1
+humanfriendly==10.0
+idna==3.10
+importlib_metadata==7.2.1
+importlib_resources==6.5.2
+Jinja2==3.1.4
+jiter==0.8.2
+joblib==1.4.2
+jsonpatch==1.33
+jsonpointer==3.0.0
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+kubernetes==31.0.0
+langchain==0.3.14
+langchain-community==0.3.14
+langchain-core==0.3.30
+langchain-openai==0.3.0
+langchain-text-splitters==0.3.5
+langsmith==0.2.11
+llvmlite==0.43.0
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+marshmallow==3.25.1
+mdurl==0.1.2
+mmh3==5.0.1
+monotonic==1.6
+more-itertools==10.6.0
+mpmath==1.3.0
+multidict==6.1.0
+mypy-extensions==1.0.0
+narwhals==1.13.5
+networkx==3.4.2
+numba==0.60.0
+numpy==1.26.4
+oauthlib==3.2.2
+onnxruntime==1.20.1
+openai==1.59.8
+openai-whisper==20240930
+opentelemetry-api==1.27.0
+opentelemetry-exporter-otlp-proto-common==1.27.0
+opentelemetry-exporter-otlp-proto-grpc==1.27.0
+opentelemetry-instrumentation==0.48b0
+opentelemetry-instrumentation-asgi==0.48b0
+opentelemetry-instrumentation-fastapi==0.48b0
+opentelemetry-proto==1.27.0
+opentelemetry-sdk==1.27.0
+opentelemetry-semantic-conventions==0.48b0
+opentelemetry-util-http==0.48b0
+orjson==3.10.14
+overrides==7.7.0
+packaging==23.2
+pandas==2.2.3
+pillow==10.4.0
+platformdirs==4.2.0
+posthog==3.8.3
+propcache==0.2.1
+protobuf==4.25.5
+pyarrow==18.0.0
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
+pydantic==2.10.5
+pydantic-settings==2.7.1
+pydantic_core==2.27.2
+pydeck==0.9.1
+Pygments==2.18.0
+PyPika==0.48.9
+pyproject_hooks==1.2.0
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+pytube==15.0.0
+pytz==2024.1
+PyYAML==6.0.2
+referencing==0.35.1
+regex==2024.11.6
+requests==2.32.3
+requests-oauthlib==2.0.0
+requests-toolbelt==1.0.0
+rich==13.9.4
+rpds-py==0.21.0
+rsa==4.9
+safetensors==0.5.2
+scikit-learn==1.6.1
+scipy==1.15.1
+sentence-transformers==3.3.1
+shellingham==1.5.4
+six==1.16.0
+smmap==5.0.1
+sniffio==1.3.1
+soupsieve==2.6
+SQLAlchemy==2.0.37
+sqlparse==0.4.4
+starlette==0.41.3
+streamlit==1.31.0
+sympy==1.13.1
+tenacity==8.5.0
+threadpoolctl==3.5.0
+tiktoken==0.8.0
+tokenizers==0.21.0
+toml==0.10.2
+torch==2.5.1
+tornado==6.4.1
+tqdm==4.67.1
+transformers==4.48.0
+typer==0.15.1
+typing-inspect==0.9.0
+typing_extensions==4.12.2
+tzdata==2024.2
+tzlocal==5.2
+urllib3==2.2.3
+uvicorn==0.34.0
+uvloop==0.21.0
+validators==0.34.0
+virtualenv==20.25.1
+watchfiles==1.0.4
+websocket-client==1.8.0
+websockets==14.1
+wrapt==1.17.2
+yarl==1.18.3
+youtube-transcript-api==0.6.3
+yt-dlp==2025.1.15
+zipp==3.21.0
